--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.416.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "node-cron": "^3.0.3",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.4.0",
